# otermtools.rag

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/psql/: postgres.env
docker/: Dockerfile
src/haiku/rag/: __init__.py  app.py  chunker.py  config.py  embedder.py  logging.py  monitor.py  reranker.py  tool.py
src/haiku/rag/api/: __init__.py  documents.py  responses.py  search.py
src/haiku/rag/store/: engine.py  search.py
src/haiku/rag/store/models/: __init__.py  chunk.py  document.py  embedding.py
src/oterm/tools/rag/: app.py  chunker.py  config.py  embedder.py  monitor.py  reader.py
src/oterm/tools/rag/api/: __init__.py  documents.py  responses.py  search.py
src/oterm/tools/rag/converters/: html.py
src/oterm/tools/rag/store/: engine.py  search.py
src/oterm/tools/rag/store/models/: chunk.py  document.py  embedding.py
src/otermtools/rag/: __init__.py  app.py  chunker.py  config.py  embedder.py  monitor.py  tool.py
src/otermtools/rag/api/: __init__.py  documents.py  health.py  responses.py  search.py
src/otermtools/rag/store/: engine.py  search.py
src/otermtools/rag/store/models/: chunk.py  document.py  embedding.py
tests/: conftest.py  test_chunker.py  test_embedder.py  test_rag_tool.py  test_reader.py  test_rerank.py  test_search.py
tests/converters/: test_html.py
tests/data/: sample.docx
tests/data/dataset/: README.md  data-00000-of-00001.arrow  dataset_info.json  state.json
tests/models/: test_documents.py  test_embeddings.py  test_meta.py  utils.py
